fix: h1 size on firefox and ios

--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -82,23 +82,23 @@
 		z-index: 1;
 
 		@media (width <= 475px) {
-			text-align: left;
+			text-align: center;
 			font-size: clamp(2.9rem, -0.4818rem + 27.0545vw, 7.55rem);
 		}
 
 		@-moz-document url-prefix() {
 			@media (width <= 475px) {
-				text-align: left;
-				font-size: clamp(2.9rem, -0.4818rem + 25.7545vw, 7.55rem);
+				text-align: center;
+				font-size: clamp(3rem, -0.4091rem + 27.2727vw, 7.6875rem);
 			}
 		}
 	}
 
-	@supports (-webkit-touch-callout: none) {
+	/* @supports (-webkit-touch-callout: none) {
 		.mainTitle {
 			letter-spacing: -0.055em;
 		}
-	}
+	} */
 
 	.subTitle {
 		font-size: clamp(0.65rem, 0.425rem + 0.95vw, 1.25rem);
